# buffer-bench

./: .gitignore  CMakeLists.txt  README.md  bench.h  client-fb.cpp  client-pb.cpp  client-raw.cpp  config.h  main.cpp  runAll.sh  server-fb.cpp  server-pb.cpp  server-raw.cpp  server.cpp
cmake/: FindFlatC.cmake  FindGRPC.cmake  FindMyFlatC.cmake
flatbuffer/: .gitignore  FBBench.cpp  Makefile  bench.fbs  bench_generated.h  client.cpp  fbbench.grpc.fb.cc  fbbench.grpc.fb.h  fbbench.h  fbbench_generated.h  server.cpp
protobuf/: bench.pb.cc  bench.pb.h  bench.proto  benchpb.cpp  benchpb.h
raw/: benchraw.cpp  benchraw.h
